# yt-transcribe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  youtube_transcript.py  youtube_transcript2.py
feat/: app.py
