[project]
name = "yt-transcribe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sreeprad", email = "*"},
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "deep-translator==1.11.4",
    "langdetect==1.0.9",
    "numpy==1.23.3",
    "openai==1.93.0",
    "whisper @ git+https://github.com/openai/whisper.git@8cf36f3508c9acd341a45eb2364239a3d81458b9",
    "Pillow==9.2.0",
    "pytube==12.1.0",
    "pytubefix==9.3.0",
    "requests==2.28.1",
    "streamlit==1.23.0",
    "streamlit-lottie==0.0.3",
    "supadata==1.2.2",
    "youtube-transcript-api==1.1.1",
]
license = {text = "MIT"}



[tool.pdm]
distribution = false
